<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">百商银通-买家端</string>
    <string name="press_one_more_to_exit">再点一次退出应用</string>

    <string name="home">首页</string>
    <string name="classify">分类</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>

    <string name="input_phone">输入手机号</string>
    <string name="input_password">输入密码</string>

    <string name="back">返回</string>
    <string name="login">登录</string>
    <string name="complete">完成</string>
    <string name="confirm">确认</string>
    <!--xsm-->
    <string name="myxsm_authorize">新商盟授权</string>
    <string name="rmb_symbol">¥</string>
    <string name="tiao">条</string>
    <string name="gong">共</string>
    <string name="myxsm_order_now">立即订购</string>
    <string name="myxsm_history_orders">历史订单</string>
    <string name="myxsm_order_total">合计：</string>
    <!--订单详情-->
    <string name="myxsm_order_detail">订单详情</string>
    <string name="myxsm_order_state">订单状态：</string>
    <string name="please_wait">请稍候...</string>
    <string name="myxsm_delete_order_title">删除订单</string>
    <string name="myxsm_delete_order_msg">是否删除订单？</string>
    <string name="myxsm_ordering_reset_btn">重置</string>
    <string name="myxsm_ordering_commit_msg">是否提交订单？</string>
    <string name="myxsm_ordering_reset_msg">是否重置订单？</string>
    <string name="myxsm_delete">删除</string>
    <string name="myxsm_pay">付款</string>
    <string name="myxsm_modify">修改</string>
    <string name="myxsm_pay_order_seach">支付查询</string>
    <string name="myxsm_ordering_limit">限量：</string>
    <string name="myxsm_ordering_select">选购的烟</string>
    <string name="myxsm_ordering_clear_reset">清空重置</string>
    <string name="myxsm_ordering_next">结算</string>
    <string name="myxsm_can_order">您还可订：</string>
    <string name="myxsm_ordering_cgt_normal">非异型烟</string>
    <string name="myxsm_ordering_cgt_special">异型烟</string>
    <string name="myxsm_ordering_reset">重置订单</string>
    <string name="myxsm_ordering_failure_cgtsum_error">非异型烟不是5的倍数</string>
    <string name="myxsm_ordering_commit">提交订单</string>
    <string name="xsm_pay_title">我要付款</string>
    <string name="ums_pay_result_title">支付状态</string>
    <string name="personal_xsm_accounts_title">我的新商盟帐号</string>
    <string name="myxsm_edit">编辑</string>
    <string name="myxsm_orders_time">订单时间：</string>
    <string name="myxsm_order_qyt">订货量：</string>
    <string name="myxsm_orders_paystate">支付状态：</string>
    <string name="myxsm_orders_amout">订单金额：</string>
    <!--烟品查找-->
    <string name="myxsm_seach_hint">请输入相关烟草名称搜索</string>
    <string name="myxsm_seach_history">最近搜索</string>
    <string name="myxsm_seach_ceanl">取消</string>
    <!-- order status -->
    <string name="order_status_new">新建</string>
    <string name="order_status_add">提交</string>
    <string name="order_status_add_failed">提交失败</string>
    <string name="order_status_check">审核</string>
    <string name="order_status_confirm">确认</string>
    <string name="order_status_delivery">配送</string>
    <string name="order_status_finish">完成</string>
    <string name="order_status_stop">停止</string>
    <string name="order_seach_hint">请重新加载商品信息后重试</string>
    <!-- business type -->
    <string name="brdtype_new">新品</string>
    <string name="brdtype_tight">紧俏</string>
    <string name="brdtype_nomal">顺销</string>
    <string name="other">其他</string>
    <!-- order pay status -->
    <string name="pay_status_unpayed">未付款</string>
    <string name="pay_status_payed">已付款</string>
    <string name="pay_status_paying">待付款</string>
    <!-- cust status -->
    <string name="cust_status_new">新增</string>
    <string name="cust_status_effective">有效</string>
    <string name="cust_status_pause">暂停</string>
    <string name="cust_status_invalid">无效</string>
    <!-- order type -->
    <string name="order_type_by_phone">电话</string>
    <string name="order_type_distribution">网配</string>
    <string name="order_type_by_internet">网上</string>
    <string name="order_type_by_tv">电视</string>
    <string name="order_type_mobile_phone">手机</string>
    <string name="order_type_by_terminal">终端</string>
    <string name="order_type_by_other">其他</string>
    <!-- cgt boolean -->
    <string name="cgt_boolean_yes">是</string>
    <string name="cgt_boolean_no">否</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="unit_category">种</string>
    <string name="unit_integral">积分：</string>

    <!-- Error View -->
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="prompt_net_failure">网络连接失败,请查看网络情况</string>
    <!--提示信息-->
    <string name="login_prompt_account">新商盟账号不能为空</string>
    <string name="login_prompt_password">密码不能为空</string>
    <string name="login_format_prompt">请输入正确格式的账号</string>
    <string name="login_prompt_error">账号或密码有误,请重新输入</string>

    <string name="goods_detail">商品详情</string>
    <string name="my_goods_order">我的订单</string>
    <string name="my_return_order">退货单</string>
    <string name="my_payment_order">付款单</string>
    <string name="my_delivery_order">发货单</string>
    <string name="my_orders_title">我的订单</string>
    <string name="my_orders_detail_title">订单详情</string>
    <string name="my_receiv_address">收货地址</string>
    <string name="my_collection">我的收藏</string>
    <string name="user_data">用户资料</string>
    <string name="feedback">意见反馈</string>
    <string name="xsm">新商盟</string>
    <string name="update_pwd">修改密码</string>
    <string name="about_me">关于我们</string>
    <string name="cleanCache">清除缓存</string>
    <string name="app_update">当前版本</string>
    <string name="app_quit">退出登录</string>
    <string name="pay_unionpay">银联支付</string>
    <string name="pay_wechat">微信支付</string>
    <string name="pay_alipay">支付宝支付</string>
    <string name="pay_transfer_accounts">线下转账</string>

    <string name="set_user_avatar">设置个人头像</string>
    <string name="next_step">下一步</string>
    <string name="get_code">获取验证码</string>

    <string name="popularity">人气</string>
    <string name="time">时间</string>
    <string name="price">价格</string>


    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="old_password">旧密码</string>
    <string name="input_old_password">请输入旧密码</string>
    <string name="new_password">新密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="input_confirm_new_password">请再次输入新密码</string>

    <string name="user_name">名称</string>
    <string name="input_user_name">请输入名称</string>
    <string name="user_account">账号</string>
    <string name="input_user_account">请输入账号</string>
    <string name="user_email">邮箱</string>
    <string name="input_user_email">请输入邮箱</string>
    <string name="user_tell">电话</string>
    <string name="input_user_tell">请输入电话号码</string>
    <string name="user_fax">传真</string>
    <string name="input_user_fax">请输入传真号</string>
    <string name="user_payment">支付账号</string>
    <string name="input_user_payment">请输入快捷支付账号</string>
    <string name="cart_empty">购物车空空如也~</string>
    <string name="please_login">请先登录~</string>
    <string name="add_cart">加入购物车</string>
    <string name="start_to_buy">开始订购</string>
    <string name="go_to_pay">去结算</string>
    <string name="submit_order">提交订单</string>
    <string name="save">保存</string>
</resources>
