<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/include_header_layout" />

    <View
        style="@style/line_diliver"
        android:layout_marginTop="10dp" />

    <LinearLayout style="@style/userLinearLayoutStyle">

        <TextView
            style="@style/userTextViewStyle"
            android:text="@string/old_password" />


        <EditText
            android:id="@+id/et_old_pwd"
            style="@style/userEditTextStyle"
            android:hint="@string/input_old_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <View style="@style/line_diliver" />

    <LinearLayout style="@style/userLinearLayoutStyle">

        <TextView
            style="@style/userTextViewStyle"
            android:text="@string/new_password" />


        <EditText
            android:id="@+id/et_news_pwd"
            style="@style/userEditTextStyle"
            android:hint="@string/input_new_password"
            android:inputType="textPassword"
            />

    </LinearLayout>

    <View style="@style/line_diliver" />


    <LinearLayout
        style="@style/userLinearLayoutStyle">

        <TextView
            style="@style/userTextViewStyle"
            android:text="@string/confirm_new_password"
            />


        <EditText
            android:id="@+id/et_confirm_pwd"
            style="@style/userEditTextStyle"
            android:hint="@string/input_confirm_new_password"
            android:inputType="textPassword"
            />

    </LinearLayout>

    <View style="@style/line_diliver" />

    <Button
        android:id="@+id/btn_confirm"
        style="@style/buttonStyle"
        android:text="@string/confirm"
        />

</LinearLayout>
