<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <include layout="@layout/include_search_edit_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_popularity"
            style="@style/screen_textView_item_style"
            android:text="@string/popularity" />

        <TextView
            android:id="@+id/tv_time"
            style="@style/screen_textView_item_style"
            android:text="@string/time" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/screen_textView_item_style"
            android:text="@string/price" />

    </LinearLayout>

    <com.jcodecraeer.xrecyclerview.XRecyclerView
        android:id="@+id/xr_data_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" />

</LinearLayout>
