<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:iconTxt="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/include_header_layout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/len_15"
        android:text="快捷支付方式"
        android:textColor="@color/color_e44010"
        android:textSize="@dimen/text_size14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.busilinq.widget.IconTextItem
            android:id="@+id/it_pay_unionpay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_sel"
            iconTxt:iconDrawable="@mipmap/ic_unionpay_logo"
            iconTxt:lineFullScreen="true"
            iconTxt:lineVisible="true"
            iconTxt:textItem="@string/pay_unionpay" />

        <com.busilinq.widget.IconTextItem
            android:id="@+id/it_pay_wechat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_sel"
            iconTxt:iconDrawable="@mipmap/ic_wechat_logo"
            iconTxt:lineFullScreen="true"
            iconTxt:lineVisible="true"
            iconTxt:textItem="@string/pay_wechat" />

        <com.busilinq.widget.IconTextItem
            android:id="@+id/it_pay_alipay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_sel"
            iconTxt:iconDrawable="@mipmap/ic_alipay_logo"
            iconTxt:lineFullScreen="true"
            iconTxt:lineVisible="true"
            iconTxt:textItem="@string/pay_alipay" />

        <com.busilinq.widget.IconTextItem
            android:id="@+id/it_transfer_accounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_20"
            android:background="@drawable/item_sel"
            iconTxt:iconDrawable="@mipmap/ic_transfer_accounts"
            iconTxt:lineFullScreen="true"
            iconTxt:lineVisible="true"
            iconTxt:textItem="@string/pay_transfer_accounts" />


    </LinearLayout>
</LinearLayout>