<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <View
        android:id="@+id/di"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/rl_bottom"
        android:background="#d9d9d9" />

    <!-- 底部Tab-->
    <LinearLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingTop="6dp">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/home_rb_style"
            android:drawableTop="@drawable/selector_tab_home"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/rb_classify"
            style="@style/home_rb_style"
            android:drawableTop="@drawable/selector_tab_classify"
            android:text="@string/classify" />


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <RadioButton
                android:id="@+id/rb_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:button="@null"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/selector_tab_cart"
                android:gravity="center_horizontal"
                android:text="@string/cart"
                android:textColor="@color/home_rb_color_selector"
                android:textSize="@dimen/text_size12" />

            <TextView
                android:id="@+id/tv_num"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="18dp"
                android:background="@drawable/bg_red_circle"
                android:gravity="center"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size10"
                android:visibility="gone" />
        </RelativeLayout>

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/home_rb_style"
            android:drawableTop="@drawable/selector_tab_mine"
            android:text="@string/mine" />

    </LinearLayout>

    <!-- 中间内容-->
    <FrameLayout
        android:id="@+id/fl_relcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/di" />


</RelativeLayout>
