<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">



    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/logo_phone"/>

            <com.busilinq.widget.ClearEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="@string/input_phone"
                android:inputType="number"
                android:maxLength="11"
                android:padding="8dp"
                android:singleLine="true"
                android:textColorHint="#999"
                android:textSize="@dimen/text_size16"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#cccccc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/logo_pwd"/>

            <com.busilinq.widget.ClearEditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:padding="8.0dp"
                android:singleLine="true"
                android:textColorHint="#999"
                android:textSize="@dimen/text_size16"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#cccccc"/>


    </LinearLayout>


    <Button
        android:id="@+id/tv_login"
        android:layout_width="285.00dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@mipmap/btn_login_bg"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size18"/>

<TextView
    android:id="@+id/tv_VersionName"
    android:layout_width="match_parent"
    android:text="当前版本V1.2"
    android:layout_marginBottom="20dp"
    android:gravity="center"
    android:layout_gravity="bottom"
    android:textColor="@color/page_text_color"
    android:layout_height="wrap_content" />
</FrameLayout>